# capsolver

./: .gitignore  99_PERCENT_REPORT.md  DESIGN.md  Dockerfile  FINAL_99_REPORT.md  FINAL_ALL_TYPES_PASS.md  FINAL_REPORT.md  README.md  docker-compose.yml  pyproject.toml
data/: slider_to_puzzle_mapping.json  slider_to_puzzle_mapping.npy
data/live/: result_1784669352.json  result_1784669424.json  result_1784669444.json  result_1784669464.json  result_1784671796.json  result_1784672342.json  result_1784672356.json
src/capsolver/: __init__.py  browser.py  drag.py  main.py  mlp.py  models.py  registry.py  routes.py  solver.py  solver_icon.py  solver_inpainting.py  solver_recaptcha.py  solver_slider.py  synthetic.py  vlm.py
