[project]
name = "capsolver"
version = "0.3.11"
description = "self-hosted capsolver microservice v0.3.11 - T001 true securityToken proven direct sweep slider 200->710 puzzleLeft 12.29px + broad sweep fallback [50,100,150,200,239,260] when detection off 258 vs true 157 + stealth Chrome131 cdc_ hide perms spoof + trusted CDP drag isTrusted=true F015->T001 + recaptcha bframe hidden->visible 400x580 screenshot 23KB"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]