[project]
name = "capsolver"
version = "0.3.15"
description = "self-hosted capsolver microservice v0.3.15 - human pre-flow scroll+random_mouse+hover 1-2s + broad sweep 0..260 step10 + template refinement <0.95 + forced 165 mapping 110->165 + proxy SE full tier + wait 6s for verify capture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]