[project]
name = "capsolver"
version = "0.3.16"
description = "self-hosted capsolver microservice v0.3.16 - optimized sweep step20 14 attempts vs 22 + auto-cleanup pool leak fix + human pre-flow scroll+random_mouse hover 1-2s + template refine + forced 165 + SE proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]